--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <title>Clear View Escapes</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travels">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <link rel="stylesheet" href="temp/styles/styles.css">
 </head>
 <body>
   <header>
@@ -21,11 +22,14 @@
   </header>
 
   <div class="large-hero">
-    <img src="assets/images/hero--large.jpg">
-    <h1>Your clarity.</h1>
-    <h2>One trip away.</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
+    <img class="large-hero__banner-img" src="assets/images/hero--large.jpg">
+    <div class="large-hero__banner">
+      <h1 class="large-hero__banner-title">Your clarity.</h1>
+      <h2 class="large-hero__banner-subtitle">One trip away.</h2>
+      <p>We create soul restoring journeys that inspire you to be you.</p>
+      <p><a href="#">Get Started Today</a></p>
+    </div>
+
   </div>
 
   <div id="our-beginning">
