--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Clear View Escapes</title>
+  <title>Travel Site</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travels">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
   <link rel="stylesheet" href="temp/styles/styles.css">
@@ -11,7 +11,7 @@
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#">Get in Touch</a>
+    <a href="#" class="btn">Get in Touch</a>
     <nav>
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
@@ -22,12 +22,21 @@
   </header>
 
   <div class="large-hero">
-    <img class="large-hero__banner-img" src="assets/images/hero--large.jpg">
+    <picture>
+        <source srcset="assets/images/hero--large.jpg 1920w, 
+        assets/images/hero--large-hi-dpi.jpg 3840w
+        " media="(min-width:1380px)">
+          <source srcset="assets/images/hero--medium.jpg 1380w, 
+          assets/images/hero--medium-hi-dpi.jpg 3840w 2760w" media="(min-width:990px)">
+      <source srcset="assets/images/hero--small.jpg  990w, 
+      assets/images/hero--small-hi-dpi.jpg 1980w" media="(min-width:640px)">
+        <img class="large-hero__banner-img 1280w" src="assets/images/hero--smaller.jpg">
+    </picture>
     <div class="large-hero__banner">
       <h1 class="large-hero__banner-title">Your clarity.</h1>
       <h2 class="large-hero__banner-subtitle">One trip away.</h2>
-      <p>We create soul restoring journeys that inspire you to be you.</p>
-      <p><a href="#">Get Started Today</a></p>
+      <p class="large-hero__banner-desc">We create soul restoring journeys that inspire you to be you.</p>
+      <p><a href="#" class="btn btn--orange btn--large">Get Started Today</a></p>
     </div>
 
   </div>
@@ -85,7 +94,7 @@
   </div>
 
   <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#">Get in Touch</a></p>
+    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
   </footer>
 </body>
 </html>
